# AGH_Thesis

./: CMakeLists.txt
shaders/: cube.vert  fractal.frag  indirect.frag  indirect.vert  temporal.frag  trivial.frag
src/: AFRRenderer.cpp  AFRRenderer.h  Benchmark.h  BenchmarkCase.cpp  BenchmarkCase.h  FileUtils.h  RendererData.h  SFRRenderer.cpp  SFRRenderer.h  Scene.cpp  Scene.h  SingleGPURenderer.h  VulkanBaseRenderer.cpp  VulkanBaseRenderer.h  main.cpp
src/benchmarks/: FragmentOverloadCase.cpp  FragmentOverloadCase.h  RawThroughputCase.cpp  RawThroughputCase.h  TemporalDependencyCase.cpp  TemporalDependencyCase.h  UnbalancedLoadCase.cpp  UnbalancedLoadCase.h
